--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "author": "Brad Traversy",
   "license": "MIT",
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "body-parser": "^1.20.3",
     "colors": "^1.4.0",
     "dotenv": "^16.3.1",
+    "express": "^4.21.2",
+    "nodemon": "^3.1.9",
     "openai": "^3.3.0",
     "readline-sync": "^1.4.10"
   }
