--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "body-parser": "^1.20.3",
     "colors": "^1.4.0",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "mongoose": "^8.9.5",
     "nodemon": "^3.1.9",
     "openai": "^3.3.0",
     "readline-sync": "^1.4.10"
